E5/parser.output
Terminals unused in grammar

    TK_PR_THEN
    TK_PR_FOREACH
    TK_PR_SWITCH
    TK_PR_CASE
    TK_PR_CLASS
    TK_PR_PRIVATE
    TK_PR_PUBLIC
    TK_PR_PROTECTED
    TK_PR_END
    TK_PR_DEFAULT
    TOKEN_ERRO


Grammar

    0 $accept: s $end

    1 $@1: %empty

    2 s: $@1 prog

    3 prog: prog global_decl

    4 $@2: %empty

    5 prog: prog type TK_IDENTIFICADOR function_params $@2 function_body

    6 $@3: %empty

    7 prog: prog TK_PR_STATIC type TK_IDENTIFICADOR function_params $@3 function_body
    8     | %empty

    9 global_decl: TK_PR_STATIC type global_decl_list ';'
   10            | type global_decl_list ';'

   11 global_decl_list: TK_IDENTIFICADOR ',' global_decl_list
   12                 | TK_IDENTIFICADOR '[' TK_LIT_INT ']' ',' global_decl_list
   13                 | TK_IDENTIFICADOR
   14                 | TK_IDENTIFICADOR '[' TK_LIT_INT ']'

   15 function_params: '(' ')'
   16                | '(' function_params_list ')'

   17 function_params_list: type TK_IDENTIFICADOR ',' function_params_list
   18                     | TK_PR_CONST type TK_IDENTIFICADOR ',' function_params_list
   19                     | type TK_IDENTIFICADOR
   20                     | TK_PR_CONST type TK_IDENTIFICADOR

   21 function_body: '{' '}'
   22              | '{' statement_list '}'

   23 statement_block: '{' '}'

   24 $@4: %empty

   25 statement_block: '{' $@4 statement_list '}'

   26 statement_list: statement statement_list
   27               | statement

   28 statement: statement_block ';'
   29          | assignment ';'
   30          | local_decl ';'
   31          | in_out ';'
   32          | function_call ';'
   33          | shift ';'
   34          | control_jump ';'
   35          | control_flow ';'

   36 $@5: %empty

   37 local_decl: TK_PR_STATIC type $@5 local_decl_list

   38 $@6: %empty

   39 local_decl: TK_PR_CONST type $@6 local_decl_list

   40 $@7: %empty

   41 local_decl: TK_PR_STATIC TK_PR_CONST type $@7 local_decl_list

   42 $@8: %empty

   43 local_decl: type $@8 local_decl_list

   44 local_decl_list: TK_IDENTIFICADOR ',' local_decl_list
   45                | TK_IDENTIFICADOR
   46                | TK_IDENTIFICADOR TK_OC_LE literal ',' local_decl_list
   47                | TK_IDENTIFICADOR TK_OC_LE TK_IDENTIFICADOR ',' local_decl_list
   48                | TK_IDENTIFICADOR TK_OC_LE literal
   49                | TK_IDENTIFICADOR TK_OC_LE TK_IDENTIFICADOR

   50 assignment: TK_IDENTIFICADOR '=' expression
   51           | TK_IDENTIFICADOR '[' expression ']' '=' expression

   52 in_out: TK_PR_INPUT TK_IDENTIFICADOR
   53       | TK_PR_OUTPUT TK_IDENTIFICADOR
   54       | TK_PR_OUTPUT literal

   55 function_call: TK_IDENTIFICADOR '(' ')'
   56              | TK_IDENTIFICADOR '(' function_call_list ')'

   57 function_call_list: expression ',' function_call_list
   58                   | expression

   59 shift: TK_IDENTIFICADOR TK_OC_SL TK_LIT_INT
   60      | TK_IDENTIFICADOR '[' expression ']' TK_OC_SL TK_LIT_INT
   61      | TK_IDENTIFICADOR TK_OC_SR TK_LIT_INT
   62      | TK_IDENTIFICADOR '[' expression ']' TK_OC_SR TK_LIT_INT

   63 control_flow: control_if
   64             | control_for
   65             | control_while

   66 control_if: TK_PR_IF '(' expression ')' statement_block
   67           | TK_PR_IF '(' expression ')' statement_block TK_PR_ELSE statement_block

   68 control_for: TK_PR_FOR '(' assignment ':' expression ':' assignment ')' statement_block

   69 control_while: TK_PR_WHILE '(' expression ')' TK_PR_DO statement_block

   70 control_jump: TK_PR_RETURN expression
   71             | TK_PR_BREAK
   72             | TK_PR_CONTINUE

   73 expression: expression10 '?' expression10 ':' expression10
   74           | expression10

   75 expression10: expression10 TK_OC_OR expression9
   76             | expression9

   77 expression9: expression9 TK_OC_AND expression8
   78            | expression8

   79 expression8: expression8 '|' expression7
   80            | expression7

   81 expression7: expression7 '&' expression6
   82            | expression6

   83 expression6: expression6 TK_OC_EQ expression5
   84            | expression6 TK_OC_NE expression5
   85            | expression5

   86 expression5: expression5 '<' expression4
   87            | expression5 '>' expression4
   88            | expression5 TK_OC_LE expression4
   89            | expression5 TK_OC_GE expression4
   90            | expression4

   91 expression4: expression4 '+' expression3
   92            | expression4 '-' expression3
   93            | expression3

   94 expression3: expression3 '*' expression2
   95            | expression3 '/' expression2
   96            | expression3 '%' expression2
   97            | expression2

   98 expression2: expression2 '^' expression1
   99            | expression1

  100 expression1: '+' expression1
  101            | '-' expression1
  102            | '?' expression1
  103            | '!' expression1
  104            | '&' expression1
  105            | '*' expression1
  106            | '#' expression1
  107            | expression0

  108 expression0: '(' expression ')'
  109            | operand

  110 operand: TK_IDENTIFICADOR
  111        | TK_LIT_INT
  112        | TK_LIT_FLOAT
  113        | TK_LIT_FALSE
  114        | TK_LIT_TRUE
  115        | function_call
  116        | TK_IDENTIFICADOR '[' expression ']'

  117 literal: TK_LIT_INT
  118        | TK_LIT_FLOAT
  119        | TK_LIT_FALSE
  120        | TK_LIT_TRUE
  121        | TK_LIT_CHAR
  122        | TK_LIT_STRING

  123 type: TK_PR_INT
  124     | TK_PR_FLOAT
  125     | TK_PR_BOOL
  126     | TK_PR_CHAR
  127     | TK_PR_STRING


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 103
    '#' (35) 106
    '%' (37) 96
    '&' (38) 81 104
    '(' (40) 15 16 55 56 66 67 68 69 108
    ')' (41) 15 16 55 56 66 67 68 69 108
    '*' (42) 94 105
    '+' (43) 91 100
    ',' (44) 11 12 17 18 44 46 47 57
    '-' (45) 92 101
    '/' (47) 95
    ':' (58) 68 73
    ';' (59) 9 10 28 29 30 31 32 33 34 35
    '<' (60) 86
    '=' (61) 50 51
    '>' (62) 87
    '?' (63) 73 102
    '[' (91) 12 14 51 60 62 116
    ']' (93) 12 14 51 60 62 116
    '^' (94) 98
    '{' (123) 21 22 23 25
    '|' (124) 79
    '}' (125) 21 22 23 25
    error (256)
    TK_PR_INT (258) 123
    TK_PR_FLOAT (259) 124
    TK_PR_BOOL (260) 125
    TK_PR_CHAR (261) 126
    TK_PR_STRING (262) 127
    TK_PR_IF (263) 66 67
    TK_PR_THEN (264)
    TK_PR_ELSE (265) 67
    TK_PR_WHILE (266) 69
    TK_PR_DO (267) 69
    TK_PR_INPUT (268) 52
    TK_PR_OUTPUT (269) 53 54
    TK_PR_RETURN (270) 70
    TK_PR_CONST (271) 18 20 39 41
    TK_PR_STATIC (272) 7 9 37 41
    TK_PR_FOREACH (273)
    TK_PR_FOR (274) 68
    TK_PR_SWITCH (275)
    TK_PR_CASE (276)
    TK_PR_BREAK (277) 71
    TK_PR_CONTINUE (278) 72
    TK_PR_CLASS (279)
    TK_PR_PRIVATE (280)
    TK_PR_PUBLIC (281)
    TK_PR_PROTECTED (282)
    TK_PR_END (283)
    TK_PR_DEFAULT (284)
    TOKEN_ERRO (285)
    TK_OC_LE <valor_lexico.string> (286) 46 47 48 49 88
    TK_OC_GE <valor_lexico.string> (287) 89
    TK_OC_EQ <valor_lexico.string> (288) 83
    TK_OC_NE <valor_lexico.string> (289) 84
    TK_OC_AND <valor_lexico.string> (290) 77
    TK_OC_OR <valor_lexico.string> (291) 75
    TK_OC_SL <valor_lexico.string> (292) 59 60
    TK_OC_SR <valor_lexico.string> (293) 61 62
    TK_LIT_INT <valor_lexico.integer> (294) 12 14 59 60 61 62 111 117
    TK_LIT_FLOAT <valor_lexico.real> (295) 112 118
    TK_LIT_FALSE <valor_lexico.boolean> (296) 113 119
    TK_LIT_TRUE <valor_lexico.boolean> (297) 114 120
    TK_LIT_CHAR <valor_lexico.character> (298) 121
    TK_LIT_STRING <valor_lexico.string> (299) 122
    TK_IDENTIFICADOR <valor_lexico.string> (300) 5 7 11 12 13 14 17 18 19 20 44 45 46 47 48 49 50 51 52 53 55 56 59 60 61 62 110 116


Nonterminals, with rules where they appear

    $accept (69)
        on left: 0
    s (70)
        on left: 2
        on right: 0
    $@1 (71)
        on left: 1
        on right: 2
    prog <node> (72)
        on left: 3 5 7 8
        on right: 2 3 5 7
    $@2 (73)
        on left: 4
        on right: 5
    $@3 (74)
        on left: 6
        on right: 7
    global_decl (75)
        on left: 9 10
        on right: 3
    global_decl_list <node> (76)
        on left: 11 12 13 14
        on right: 9 10 11 12
    function_params <node> (77)
        on left: 15 16
        on right: 5 7
    function_params_list <node> (78)
        on left: 17 18 19 20
        on right: 16 17 18
    function_body <node> (79)
        on left: 21 22
        on right: 5 7
    statement_block <node> (80)
        on left: 23 25
        on right: 28 66 67 68 69
    $@4 (81)
        on left: 24
        on right: 25
    statement_list <node> (82)
        on left: 26 27
        on right: 22 25 26
    statement <node> (83)
        on left: 28 29 30 31 32 33 34 35
        on right: 26 27
    local_decl <node> (84)
        on left: 37 39 41 43
        on right: 30
    $@5 (85)
        on left: 36
        on right: 37
    $@6 (86)
        on left: 38
        on right: 39
    $@7 (87)
        on left: 40
        on right: 41
    $@8 (88)
        on left: 42
        on right: 43
    local_decl_list <node> (89)
        on left: 44 45 46 47 48 49
        on right: 37 39 41 43 44 46 47
    assignment <node> (90)
        on left: 50 51
        on right: 29 68
    in_out <node> (91)
        on left: 52 53 54
        on right: 31
    function_call <node> (92)
        on left: 55 56
        on right: 32 115
    function_call_list <node> (93)
        on left: 57 58
        on right: 56 57
    shift <node> (94)
        on left: 59 60 61 62
        on right: 33
    control_flow <node> (95)
        on left: 63 64 65
        on right: 35
    control_if <node> (96)
        on left: 66 67
        on right: 63
    control_for <node> (97)
        on left: 68
        on right: 64
    control_while <node> (98)
        on left: 69
        on right: 65
    control_jump <node> (99)
        on left: 70 71 72
        on right: 34
    expression <node> (100)
        on left: 73 74
        on right: 50 51 57 58 60 62 66 67 68 69 70 108 116
    expression10 <node> (101)
        on left: 75 76
        on right: 73 74 75
    expression9 <node> (102)
        on left: 77 78
        on right: 75 76 77
    expression8 <node> (103)
        on left: 79 80
        on right: 77 78 79
    expression7 <node> (104)
        on left: 81 82
        on right: 79 80 81
    expression6 <node> (105)
        on left: 83 84 85
        on right: 81 82 83 84
    expression5 <node> (106)
        on left: 86 87 88 89 90
        on right: 83 84 85 86 87 88 89
    expression4 <node> (107)
        on left: 91 92 93
        on right: 86 87 88 89 90 91 92
    expression3 <node> (108)
        on left: 94 95 96 97
        on right: 91 92 93 94 95 96
    expression2 <node> (109)
        on left: 98 99
        on right: 94 95 96 97 98
    expression1 <node> (110)
        on left: 100 101 102 103 104 105 106 107
        on right: 98 99 100 101 102 103 104 105 106
    expression0 <node> (111)
        on left: 108 109
        on right: 107
    operand <node> (112)
        on left: 110 111 112 113 114 115 116
        on right: 109
    literal <node> (113)
        on left: 117 118 119 120 121 122
        on right: 46 48 54
    type <dt_type> (114)
        on left: 123 124 125 126 127
        on right: 5 7 9 10 17 18 19 20 37 39 41 43


State 0

    0 $accept: . s $end

    $default  reduce using rule 1 ($@1)

    s    go to state 1
    $@1  go to state 2


State 1

    0 $accept: s . $end

    $end  shift, and go to state 3


State 2

    2 s: $@1 . prog

    $default  reduce using rule 8 (prog)

    prog  go to state 4


State 3

    0 $accept: s $end .

    $default  accept


State 4

    2 s: $@1 prog .
    3 prog: prog . global_decl
    5     | prog . type TK_IDENTIFICADOR function_params $@2 function_body
    7     | prog . TK_PR_STATIC type TK_IDENTIFICADOR function_params $@3 function_body

    TK_PR_INT     shift, and go to state 5
    TK_PR_FLOAT   shift, and go to state 6
    TK_PR_BOOL    shift, and go to state 7
    TK_PR_CHAR    shift, and go to state 8
    TK_PR_STRING  shift, and go to state 9
    TK_PR_STATIC  shift, and go to state 10

    $default  reduce using rule 2 (s)

    global_decl  go to state 11
    type         go to state 12


State 5

  123 type: TK_PR_INT .

    $default  reduce using rule 123 (type)


State 6

  124 type: TK_PR_FLOAT .

    $default  reduce using rule 124 (type)


State 7

  125 type: TK_PR_BOOL .

    $default  reduce using rule 125 (type)


State 8

  126 type: TK_PR_CHAR .

    $default  reduce using rule 126 (type)


State 9

  127 type: TK_PR_STRING .

    $default  reduce using rule 127 (type)


State 10

    7 prog: prog TK_PR_STATIC . type TK_IDENTIFICADOR function_params $@3 function_body
    9 global_decl: TK_PR_STATIC . type global_decl_list ';'

    TK_PR_INT     shift, and go to state 5
    TK_PR_FLOAT   shift, and go to state 6
    TK_PR_BOOL    shift, and go to state 7
    TK_PR_CHAR    shift, and go to state 8
    TK_PR_STRING  shift, and go to state 9

    type  go to state 13


State 11

    3 prog: prog global_decl .

    $default  reduce using rule 3 (prog)


State 12

    5 prog: prog type . TK_IDENTIFICADOR function_params $@2 function_body
   10 global_decl: type . global_decl_list ';'

    TK_IDENTIFICADOR  shift, and go to state 14

    global_decl_list  go to state 15


State 13

    7 prog: prog TK_PR_STATIC type . TK_IDENTIFICADOR function_params $@3 function_body
    9 global_decl: TK_PR_STATIC type . global_decl_list ';'

    TK_IDENTIFICADOR  shift, and go to state 16

    global_decl_list  go to state 17


State 14

    5 prog: prog type TK_IDENTIFICADOR . function_params $@2 function_body
   11 global_decl_list: TK_IDENTIFICADOR . ',' global_decl_list
   12                 | TK_IDENTIFICADOR . '[' TK_LIT_INT ']' ',' global_decl_list
   13                 | TK_IDENTIFICADOR .
   14                 | TK_IDENTIFICADOR . '[' TK_LIT_INT ']'

    ','  shift, and go to state 18
    '['  shift, and go to state 19
    '('  shift, and go to state 20

    $default  reduce using rule 13 (global_decl_list)

    function_params  go to state 21


State 15

   10 global_decl: type global_decl_list . ';'

    ';'  shift, and go to state 22


State 16

    7 prog: prog TK_PR_STATIC type TK_IDENTIFICADOR . function_params $@3 function_body
   11 global_decl_list: TK_IDENTIFICADOR . ',' global_decl_list
   12                 | TK_IDENTIFICADOR . '[' TK_LIT_INT ']' ',' global_decl_list
   13                 | TK_IDENTIFICADOR .
   14                 | TK_IDENTIFICADOR . '[' TK_LIT_INT ']'

    ','  shift, and go to state 18
    '['  shift, and go to state 19
    '('  shift, and go to state 20

    $default  reduce using rule 13 (global_decl_list)

    function_params  go to state 23


State 17

    9 global_decl: TK_PR_STATIC type global_decl_list . ';'

    ';'  shift, and go to state 24


State 18

   11 global_decl_list: TK_IDENTIFICADOR ',' . global_decl_list

    TK_IDENTIFICADOR  shift, and go to state 25

    global_decl_list  go to state 26


State 19

   12 global_decl_list: TK_IDENTIFICADOR '[' . TK_LIT_INT ']' ',' global_decl_list
   14                 | TK_IDENTIFICADOR '[' . TK_LIT_INT ']'

    TK_LIT_INT  shift, and go to state 27


State 20

   15 function_params: '(' . ')'
   16                | '(' . function_params_list ')'

    TK_PR_INT     shift, and go to state 5
    TK_PR_FLOAT   shift, and go to state 6
    TK_PR_BOOL    shift, and go to state 7
    TK_PR_CHAR    shift, and go to state 8
    TK_PR_STRING  shift, and go to state 9
    TK_PR_CONST   shift, and go to state 28
    ')'           shift, and go to state 29

    function_params_list  go to state 30
    type                  go to state 31


State 21

    5 prog: prog type TK_IDENTIFICADOR function_params . $@2 function_body

    $default  reduce using rule 4 ($@2)

    $@2  go to state 32


State 22

   10 global_decl: type global_decl_list ';' .

    $default  reduce using rule 10 (global_decl)


State 23

    7 prog: prog TK_PR_STATIC type TK_IDENTIFICADOR function_params . $@3 function_body

    $default  reduce using rule 6 ($@3)

    $@3  go to state 33


State 24

    9 global_decl: TK_PR_STATIC type global_decl_list ';' .

    $default  reduce using rule 9 (global_decl)


State 25

   11 global_decl_list: TK_IDENTIFICADOR . ',' global_decl_list
   12                 | TK_IDENTIFICADOR . '[' TK_LIT_INT ']' ',' global_decl_list
   13                 | TK_IDENTIFICADOR .
   14                 | TK_IDENTIFICADOR . '[' TK_LIT_INT ']'

    ','  shift, and go to state 18
    '['  shift, and go to state 19

    $default  reduce using rule 13 (global_decl_list)


State 26

   11 global_decl_list: TK_IDENTIFICADOR ',' global_decl_list .

    $default  reduce using rule 11 (global_decl_list)


State 27

   12 global_decl_list: TK_IDENTIFICADOR '[' TK_LIT_INT . ']' ',' global_decl_list
   14                 | TK_IDENTIFICADOR '[' TK_LIT_INT . ']'

    ']'  shift, and go to state 34


State 28

   18 function_params_list: TK_PR_CONST . type TK_IDENTIFICADOR ',' function_params_list
   20                     | TK_PR_CONST . type TK_IDENTIFICADOR

    TK_PR_INT     shift, and go to state 5
    TK_PR_FLOAT   shift, and go to state 6
    TK_PR_BOOL    shift, and go to state 7
    TK_PR_CHAR    shift, and go to state 8
    TK_PR_STRING  shift, and go to state 9

    type  go to state 35


State 29

   15 function_params: '(' ')' .

    $default  reduce using rule 15 (function_params)


State 30

   16 function_params: '(' function_params_list . ')'

    ')'  shift, and go to state 36


State 31

   17 function_params_list: type . TK_IDENTIFICADOR ',' function_params_list
   19                     | type . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 37


State 32

    5 prog: prog type TK_IDENTIFICADOR function_params $@2 . function_body

    '{'  shift, and go to state 38

    function_body  go to state 39


State 33

    7 prog: prog TK_PR_STATIC type TK_IDENTIFICADOR function_params $@3 . function_body

    '{'  shift, and go to state 38

    function_body  go to state 40


State 34

   12 global_decl_list: TK_IDENTIFICADOR '[' TK_LIT_INT ']' . ',' global_decl_list
   14                 | TK_IDENTIFICADOR '[' TK_LIT_INT ']' .

    ','  shift, and go to state 41

    $default  reduce using rule 14 (global_decl_list)


State 35

   18 function_params_list: TK_PR_CONST type . TK_IDENTIFICADOR ',' function_params_list
   20                     | TK_PR_CONST type . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 42


State 36

   16 function_params: '(' function_params_list ')' .

    $default  reduce using rule 16 (function_params)


State 37

   17 function_params_list: type TK_IDENTIFICADOR . ',' function_params_list
   19                     | type TK_IDENTIFICADOR .

    ','  shift, and go to state 43

    $default  reduce using rule 19 (function_params_list)


State 38

   21 function_body: '{' . '}'
   22              | '{' . statement_list '}'

    TK_PR_INT         shift, and go to state 5
    TK_PR_FLOAT       shift, and go to state 6
    TK_PR_BOOL        shift, and go to state 7
    TK_PR_CHAR        shift, and go to state 8
    TK_PR_STRING      shift, and go to state 9
    TK_PR_IF          shift, and go to state 44
    TK_PR_WHILE       shift, and go to state 45
    TK_PR_INPUT       shift, and go to state 46
    TK_PR_OUTPUT      shift, and go to state 47
    TK_PR_RETURN      shift, and go to state 48
    TK_PR_CONST       shift, and go to state 49
    TK_PR_STATIC      shift, and go to state 50
    TK_PR_FOR         shift, and go to state 51
    TK_PR_BREAK       shift, and go to state 52
    TK_PR_CONTINUE    shift, and go to state 53
    TK_IDENTIFICADOR  shift, and go to state 54
    '{'               shift, and go to state 55
    '}'               shift, and go to state 56

    statement_block  go to state 57
    statement_list   go to state 58
    statement        go to state 59
    local_decl       go to state 60
    assignment       go to state 61
    in_out           go to state 62
    function_call    go to state 63
    shift            go to state 64
    control_flow     go to state 65
    control_if       go to state 66
    control_for      go to state 67
    control_while    go to state 68
    control_jump     go to state 69
    type             go to state 70


State 39

    5 prog: prog type TK_IDENTIFICADOR function_params $@2 function_body .

    $default  reduce using rule 5 (prog)


State 40

    7 prog: prog TK_PR_STATIC type TK_IDENTIFICADOR function_params $@3 function_body .

    $default  reduce using rule 7 (prog)


State 41

   12 global_decl_list: TK_IDENTIFICADOR '[' TK_LIT_INT ']' ',' . global_decl_list

    TK_IDENTIFICADOR  shift, and go to state 25

    global_decl_list  go to state 71


State 42

   18 function_params_list: TK_PR_CONST type TK_IDENTIFICADOR . ',' function_params_list
   20                     | TK_PR_CONST type TK_IDENTIFICADOR .

    ','  shift, and go to state 72

    $default  reduce using rule 20 (function_params_list)


State 43

   17 function_params_list: type TK_IDENTIFICADOR ',' . function_params_list

    TK_PR_INT     shift, and go to state 5
    TK_PR_FLOAT   shift, and go to state 6
    TK_PR_BOOL    shift, and go to state 7
    TK_PR_CHAR    shift, and go to state 8
    TK_PR_STRING  shift, and go to state 9
    TK_PR_CONST   shift, and go to state 28

    function_params_list  go to state 73
    type                  go to state 31


State 44

   66 control_if: TK_PR_IF . '(' expression ')' statement_block
   67           | TK_PR_IF . '(' expression ')' statement_block TK_PR_ELSE statement_block

    '('  shift, and go to state 74


State 45

   69 control_while: TK_PR_WHILE . '(' expression ')' TK_PR_DO statement_block

    '('  shift, and go to state 75


State 46

   52 in_out: TK_PR_INPUT . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 76


State 47

   53 in_out: TK_PR_OUTPUT . TK_IDENTIFICADOR
   54       | TK_PR_OUTPUT . literal

    TK_LIT_INT        shift, and go to state 77
    TK_LIT_FLOAT      shift, and go to state 78
    TK_LIT_FALSE      shift, and go to state 79
    TK_LIT_TRUE       shift, and go to state 80
    TK_LIT_CHAR       shift, and go to state 81
    TK_LIT_STRING     shift, and go to state 82
    TK_IDENTIFICADOR  shift, and go to state 83

    literal  go to state 84


State 48

   70 control_jump: TK_PR_RETURN . expression

    TK_LIT_INT        shift, and go to state 85
    TK_LIT_FLOAT      shift, and go to state 86
    TK_LIT_FALSE      shift, and go to state 87
    TK_LIT_TRUE       shift, and go to state 88
    TK_IDENTIFICADOR  shift, and go to state 89
    '('               shift, and go to state 90
    '?'               shift, and go to state 91
    '&'               shift, and go to state 92
    '+'               shift, and go to state 93
    '-'               shift, and go to state 94
    '*'               shift, and go to state 95
    '!'               shift, and go to state 96
    '#'               shift, and go to state 97

    function_call  go to state 98
    expression     go to state 99
    expression10   go to state 100
    expression9    go to state 101
    expression8    go to state 102
    expression7    go to state 103
    expression6    go to state 104
    expression5    go to state 105
    expression4    go to state 106
    expression3    go to state 107
    expression2    go to state 108
    expression1    go to state 109
    expression0    go to state 110
    operand        go to state 111


State 49

   39 local_decl: TK_PR_CONST . type $@6 local_decl_list

    TK_PR_INT     shift, and go to state 5
    TK_PR_FLOAT   shift, and go to state 6
    TK_PR_BOOL    shift, and go to state 7
    TK_PR_CHAR    shift, and go to state 8
    TK_PR_STRING  shift, and go to state 9

    type  go to state 112


State 50

   37 local_decl: TK_PR_STATIC . type $@5 local_decl_list
   41           | TK_PR_STATIC . TK_PR_CONST type $@7 local_decl_list

    TK_PR_INT     shift, and go to state 5
    TK_PR_FLOAT   shift, and go to state 6
    TK_PR_BOOL    shift, and go to state 7
    TK_PR_CHAR    shift, and go to state 8
    TK_PR_STRING  shift, and go to state 9
    TK_PR_CONST   shift, and go to state 113

    type  go to state 114


State 51

   68 control_for: TK_PR_FOR . '(' assignment ':' expression ':' assignment ')' statement_block

    '('  shift, and go to state 115


State 52

   71 control_jump: TK_PR_BREAK .

    $default  reduce using rule 71 (control_jump)


State 53

   72 control_jump: TK_PR_CONTINUE .

    $default  reduce using rule 72 (control_jump)


State 54

   50 assignment: TK_IDENTIFICADOR . '=' expression
   51           | TK_IDENTIFICADOR . '[' expression ']' '=' expression
   55 function_call: TK_IDENTIFICADOR . '(' ')'
   56              | TK_IDENTIFICADOR . '(' function_call_list ')'
   59 shift: TK_IDENTIFICADOR . TK_OC_SL TK_LIT_INT
   60      | TK_IDENTIFICADOR . '[' expression ']' TK_OC_SL TK_LIT_INT
   61      | TK_IDENTIFICADOR . TK_OC_SR TK_LIT_INT
   62      | TK_IDENTIFICADOR . '[' expression ']' TK_OC_SR TK_LIT_INT

    TK_OC_SL  shift, and go to state 116
    TK_OC_SR  shift, and go to state 117
    '['       shift, and go to state 118
    '('       shift, and go to state 119
    '='       shift, and go to state 120


State 55

   23 statement_block: '{' . '}'
   25                | '{' . $@4 statement_list '}'

    '}'  shift, and go to state 121

    $default  reduce using rule 24 ($@4)

    $@4  go to state 122


State 56

   21 function_body: '{' '}' .

    $default  reduce using rule 21 (function_body)


State 57

   28 statement: statement_block . ';'

    ';'  shift, and go to state 123


State 58

   22 function_body: '{' statement_list . '}'

    '}'  shift, and go to state 124


State 59

   26 statement_list: statement . statement_list
   27               | statement .

    TK_PR_INT         shift, and go to state 5
    TK_PR_FLOAT       shift, and go to state 6
    TK_PR_BOOL        shift, and go to state 7
    TK_PR_CHAR        shift, and go to state 8
    TK_PR_STRING      shift, and go to state 9
    TK_PR_IF          shift, and go to state 44
    TK_PR_WHILE       shift, and go to state 45
    TK_PR_INPUT       shift, and go to state 46
    TK_PR_OUTPUT      shift, and go to state 47
    TK_PR_RETURN      shift, and go to state 48
    TK_PR_CONST       shift, and go to state 49
    TK_PR_STATIC      shift, and go to state 50
    TK_PR_FOR         shift, and go to state 51
    TK_PR_BREAK       shift, and go to state 52
    TK_PR_CONTINUE    shift, and go to state 53
    TK_IDENTIFICADOR  shift, and go to state 54
    '{'               shift, and go to state 55

    $default  reduce using rule 27 (statement_list)

    statement_block  go to state 57
    statement_list   go to state 125
    statement        go to state 59
    local_decl       go to state 60
    assignment       go to state 61
    in_out           go to state 62
    function_call    go to state 63
    shift            go to state 64
    control_flow     go to state 65
    control_if       go to state 66
    control_for      go to state 67
    control_while    go to state 68
    control_jump     go to state 69
    type             go to state 70


State 60

   30 statement: local_decl . ';'

    ';'  shift, and go to state 126


State 61

   29 statement: assignment . ';'

    ';'  shift, and go to state 127


State 62

   31 statement: in_out . ';'

    ';'  shift, and go to state 128


State 63

   32 statement: function_call . ';'

    ';'  shift, and go to state 129


State 64

   33 statement: shift . ';'

    ';'  shift, and go to state 130


State 65

   35 statement: control_flow . ';'

    ';'  shift, and go to state 131


State 66

   63 control_flow: control_if .

    $default  reduce using rule 63 (control_flow)


State 67

   64 control_flow: control_for .

    $default  reduce using rule 64 (control_flow)


State 68

   65 control_flow: control_while .

    $default  reduce using rule 65 (control_flow)


State 69

   34 statement: control_jump . ';'

    ';'  shift, and go to state 132


State 70

   43 local_decl: type . $@8 local_decl_list

    $default  reduce using rule 42 ($@8)

    $@8  go to state 133


State 71

   12 global_decl_list: TK_IDENTIFICADOR '[' TK_LIT_INT ']' ',' global_decl_list .

    $default  reduce using rule 12 (global_decl_list)


State 72

   18 function_params_list: TK_PR_CONST type TK_IDENTIFICADOR ',' . function_params_list

    TK_PR_INT     shift, and go to state 5
    TK_PR_FLOAT   shift, and go to state 6
    TK_PR_BOOL    shift, and go to state 7
    TK_PR_CHAR    shift, and go to state 8
    TK_PR_STRING  shift, and go to state 9
    TK_PR_CONST   shift, and go to state 28

    function_params_list  go to state 134
    type                  go to state 31


State 73

   17 function_params_list: type TK_IDENTIFICADOR ',' function_params_list .

    $default  reduce using rule 17 (function_params_list)


State 74

   66 control_if: TK_PR_IF '(' . expression ')' statement_block
   67           | TK_PR_IF '(' . expression ')' statement_block TK_PR_ELSE statement_block

    TK_LIT_INT        shift, and go to state 85
    TK_LIT_FLOAT      shift, and go to state 86
    TK_LIT_FALSE      shift, and go to state 87
    TK_LIT_TRUE       shift, and go to state 88
    TK_IDENTIFICADOR  shift, and go to state 89
    '('               shift, and go to state 90
    '?'               shift, and go to state 91
    '&'               shift, and go to state 92
    '+'               shift, and go to state 93
    '-'               shift, and go to state 94
    '*'               shift, and go to state 95
    '!'               shift, and go to state 96
    '#'               shift, and go to state 97

    function_call  go to state 98
    expression     go to state 135
    expression10   go to state 100
    expression9    go to state 101
    expression8    go to state 102
    expression7    go to state 103
    expression6    go to state 104
    expression5    go to state 105
    expression4    go to state 106
    expression3    go to state 107
    expression2    go to state 108
    expression1    go to state 109
    expression0    go to state 110
    operand        go to state 111


State 75

   69 control_while: TK_PR_WHILE '(' . expression ')' TK_PR_DO statement_block

    TK_LIT_INT        shift, and go to state 85
    TK_LIT_FLOAT      shift, and go to state 86
    TK_LIT_FALSE      shift, and go to state 87
    TK_LIT_TRUE       shift, and go to state 88
    TK_IDENTIFICADOR  shift, and go to state 89
    '('               shift, and go to state 90
    '?'               shift, and go to state 91
    '&'               shift, and go to state 92
    '+'               shift, and go to state 93
    '-'               shift, and go to state 94
    '*'               shift, and go to state 95
    '!'               shift, and go to state 96
    '#'               shift, and go to state 97

    function_call  go to state 98
    expression     go to state 136
    expression10   go to state 100
    expression9    go to state 101
    expression8    go to state 102
    expression7    go to state 103
    expression6    go to state 104
    expression5    go to state 105
    expression4    go to state 106
    expression3    go to state 107
    expression2    go to state 108
    expression1    go to state 109
    expression0    go to state 110
    operand        go to state 111


State 76

   52 in_out: TK_PR_INPUT TK_IDENTIFICADOR .

    $default  reduce using rule 52 (in_out)


State 77

  117 literal: TK_LIT_INT .

    $default  reduce using rule 117 (literal)


State 78

  118 literal: TK_LIT_FLOAT .

    $default  reduce using rule 118 (literal)


State 79

  119 literal: TK_LIT_FALSE .

    $default  reduce using rule 119 (literal)


State 80

  120 literal: TK_LIT_TRUE .

    $default  reduce using rule 120 (literal)


State 81

  121 literal: TK_LIT_CHAR .

    $default  reduce using rule 121 (literal)


State 82

  122 literal: TK_LIT_STRING .

    $default  reduce using rule 122 (literal)


State 83

   53 in_out: TK_PR_OUTPUT TK_IDENTIFICADOR .

    $default  reduce using rule 53 (in_out)


State 84

   54 in_out: TK_PR_OUTPUT literal .

    $default  reduce using rule 54 (in_out)


State 85

  111 operand: TK_LIT_INT .

    $default  reduce using rule 111 (operand)


State 86

  112 operand: TK_LIT_FLOAT .

    $default  reduce using rule 112 (operand)


State 87

  113 operand: TK_LIT_FALSE .

    $default  reduce using rule 113 (operand)


State 88

  114 operand: TK_LIT_TRUE .

    $default  reduce using rule 114 (operand)


State 89

   55 function_call: TK_IDENTIFICADOR . '(' ')'
   56              | TK_IDENTIFICADOR . '(' function_call_list ')'
  110 operand: TK_IDENTIFICADOR .
  116        | TK_IDENTIFICADOR . '[' expression ']'

    '['  shift, and go to state 137
    '('  shift, and go to state 119
